test/errors/functions/params_non_array_error.hy
// EXPECT_OUTPUT: must be a single-dimensional array type
int bad(params int value)
{
    return value
}
